--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Jasurbek Shomaqsudov is a front-end developer who creates responsive and user-friendly websites. See my portfolio and learn more about my skills, experience."
     />
+    <meta
+      name="keywords"
+      content="Jasurbek Shomaqsudov, front-end developer, web developer, portfolio, HTML, CSS, JavaScript, jQuery, Bootstrap, responsive design, web design, web development, front-end, frontend"
+    />
+    <meta name="author" content="Jasurbek Shomaqsudov" />
+    <meta
+      property="og:title"
+      content="Jasurbek Shomaqsudov - Front-end Developer"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://jasurbek-shomaqsudov.vercel.app" />
+    <meta
+      property="og:image"
+      content="https://jasurbek-shomaqsudov.vercel.app/img/profile.jpg"
+    />
+    <meta
+      property="og:description"
+      content="Jasurbek Shomaqsudov is a front-end developer who creates responsive and user-friendly websites. See my portfolio and learn more about my skills and experience."
+    />
+    <meta
+      property="og:site_name"
+      content="Jasurbek Shomaqsudov - Front-end Developer"
+    />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@jasurbek_shomaqsudov" />
+    <meta
+      name="twitter:title"
+      content="Jasurbek Shomaqsudov - Front-end Developer"
+    />
+    <meta
+      name="twitter:description"
+      content="Jasurbek Shomaqsudov is a front-end developer who creates responsive and user-friendly websites. See my portfolio and learn more about my skills and experience."
+    />
+    <meta
+      name="twitter:image"
+      content="https://jasurbek-shomaqsudov.vercel.app/img/profile.jpg"
+    />
+    <meta name="theme-color" content="#000000" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <title>Jasurbek Shomaqsudov - Front-end Developer</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
