social media add

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     />
     <meta
       name="keywords"
-      content="Jasurbek Shomaqsudov, front-end developer, Jasurbek Shomaqsudov, jasurbek shomaqsudov, Shomaqsudov Jasurbek, shomaqsudov jasurbek, Jasurbek's Portfolio, jasur shomaqsudov, Jasur Shomaqsudov, Jasurbek Frontend, Jasurbek Frontend Developer, Frontend Developer, jasurbekshomaqsudov, jasurshomaqsudov, shomaqsudovjasurbek, shomaqsudovjasur, programming, frontend, react developer, web developer, portfolio, HTML, CSS, JavaScript, jQuery, Bootstrap, responsive design, web design, web development, front-end, frontend"
+      content="Jasurbek Shomaqsudov, front-end developer, Jasurbek Shomaqsudov, jasurbek shomaqsudov, Shomaqsudov Jasurbek, shomaqsudov jasurbek, shomaqsudov jasurbek frontend, shomaqsudov Jasurbek, shomaqsudov jasur, jasur, jasur shomaqsudov, shomaqsudov, Jasurbek's Portfolio, jasur shomaqsudov, Jasur Shomaqsudov, Jasurbek Frontend, Jasurbek Frontend Developer, Frontend Developer, jasurbekshomaqsudov, jasurshomaqsudov, shomaqsudovjasurbek, shomaqsudovjasur, programming, frontend, react developer, web developer, portfolio, HTML, CSS, JavaScript, jQuery, Bootstrap, responsive design, web design, web development, front-end, frontend"
     />
     <meta name="author" content="Jasurbek Shomaqsudov" />
     <meta
