delete: custom axios, all crud methods; feat: local db.json and his get/put cru method, add post page

--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,8 @@
       content="https://jasurbek-shomaqsudov.vercel.app/img/profile.jpg"
     />
     <meta name="theme-color" content="#000000" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" href="%PUBLIC_URL%/logo2.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo2.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       rel="stylesheet"
